feat: retrofit REST conventions
